--- a/css/buttons.css
+++ b/css/buttons.css
@@ -7,10 +7,12 @@ button {
     color: #F1C40F;
     border: 2px solid #F1C40F;
     border-radius: 1.75rem;
-    padding: 0.5rem;
+    padding: 0.25rem;
     font-weight: 600;
     font-size: 1.5rem;
     min-width: 8rem;
+    height: 2.5rem;
+    vertical-align: middle;
 }
 
 .secondaryBtn {
@@ -18,10 +20,12 @@ button {
     color: #2274A5;
     border: 2px solid #2274A5;
     border-radius: 1.75rem;
-    padding: 0.5rem;
+    padding: 0.25rem;
     font-weight: 600;
     font-size: 1.5rem;
     min-width: 8rem;
+    height: 2.5rem;
+    vertical-align: middle;
 }
 
 .primaryBtn:hover {
